Rebase onto the upstream branch